# coreml-forge

./: .gitattributes  .gitignore  CLAUDE.md  DEVELOPER_DIARY.md  NEXT_SESSION.md  PAIR_WORKFLOW.md  README.md  next_session.md  pyproject.toml
docs/: DOCUMENTATION_GUIDE.md
docs/learning/: README.md  depth_anything_export.md  whisper_coreml_export.md  yolo_coreml_export.md
docs/project/: CHANGELOG.md  DOCUMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  NEXT_SESSION.md  WORKFLOW.md
exports/FaceLandmarks.mlpackage/: Manifest.json
exports/FaceLandmarks.mlpackage/Data/com.apple.CoreML/: model.mlmodel
exports/Whisper_large_v3_turbo/: config.json  decoder_weights.safetensors  tokenizer_config.json
exports/Whisper_large_v3_turbo/WhisperEncoder_large_v3_turbo.mlpackage/: Manifest.json
exports/Whisper_large_v3_turbo/WhisperEncoder_large_v3_turbo.mlpackage/Data/com.apple.CoreML/: model.mlmodel
exports/Whisper_small/: config.json  decoder_weights.safetensors  tokenizer.json
exports/Whisper_small/WhisperEncoder_small.mlpackage/: Manifest.json
exports/Whisper_small/WhisperEncoder_small.mlpackage/Data/com.apple.CoreML/: model.mlmodel
scripts/: export_depth.py  export_face_landmarks.py  export_summarizer.py  export_whisper.py  export_whisper_turbo.py  export_yolo.py  quantize_model.py
